--- a/notes/w1l2.md
+++ b/notes/w1l2.md
@@ -10,7 +10,7 @@ A **string** is a finite sequence of symbols.
 
 Assume our alphabet is `{0,1}`. What are all the possible strings you can create from this alphabet?
 - 0, 1, 00, 01, 10, ...
-- All the possible strings from an alphabet (denoted by **∑^+** (reads "sigma plus")) form an *infinite* set of *finite* strings.
+- All the possible strings from an alphabet (denoted by **∑<sup>+</sup>** (reads "sigma plus")) form an *infinite* set of *finite* strings.
 
 Note that the sigma plus of an alphabet is *not* the same as the power set because sigma plus is a *sequence* of all possible strings. If it were the power set, then "00" would be the same as "0" as they are comprised of the same elements.
 
