--- a/notes/w1l2.md
+++ b/notes/w1l2.md
@@ -3,12 +3,15 @@
 Proof - Combination of mathematical notation and human language that provides a convincing argument for the truth of a statement.
 
 ## Models of Computations
+
 ### Strings
+
 To define strings, we need an alphabet where an **alphabet** is defined as any nonempty finite set of elements called **symbols**, which you - as a reader - must set aside from your conceptions of meaning. For example, the Greek letter pi which usually means the irrational number 3.1415... here is just another written symbol.
 
 A **string** is a finite sequence of symbols.
 
 Assume our alphabet is `{0,1}`. What are all the possible strings you can create from this alphabet?
+
 - 0, 1, 00, 01, 10, ...
 - All the possible strings from an alphabet (denoted by **∑<sup>+</sup>** (reads "sigma plus")) form an *infinite* set of *finite* strings.
 
@@ -25,6 +28,7 @@ L1 • L2 = { x • y | x ∈ L1, y ∈ L2}
 ```
 
 If L1 = `{00, 01, 10, 11}` and L2 = `{0, 1}`, then L1 • L2 is `{000, 010, 100, 110, 001, 011, 101, 111}`. In this example, L1 • L2 = L2 • L1 i.e. it is commutative, HOWEVER this is NOT usually the case and is definitely not strictly true. Despite the shared symbol, concatenation is not commutative like multiplication.
+
 - The empty set is similar to zero in multiplication however, in that L1 • Ø = Ø. L1 • Ø is NOT L1.
 - If the empty set is like zero, then do we have an equivalent to 1? Such that _ • W = W?
 - Yes! It's called epsilon ε or **the empty string**. It has *length* zero however.
@@ -40,6 +44,6 @@ Epsilon is the *identity* operation for string concatenation; empty set is the *
 
 <br />
 
-Say we have a language L$ which comprises the set of all American currency strings. For this, we consider $1.99, $17.00, $0.99, and $0 to be valid and leading zeroes (except the special $0 case) (e.g. $01.99), $, 9, $.99 to be INVALID.
+Say we have a language $L$ which comprises the set of all American currency strings. For this, we consider $1.99, $17.00, \$0.99, and \$0 to be valid and leading zeroes (except the special \$0 case) (e.g. $01.99), $, 9, \$.99 to be INVALID.
 
 Write an FSA which models this language.
