week 2 lec 2 + pdf

--- a/notes/w1l1.md
+++ b/notes/w1l1.md
@@ -6,7 +6,7 @@ Imagine a Venn diagram with the left set comprised of "discrete math," "words," 
 
 This course has practical implications in compiler construction.
 
-## "What can a computer do?"
+## :thinking: "What can a computer do?"
 
 The central question of this course. Some answers from the class were:
 
@@ -79,7 +79,7 @@ Three ways to represent a computer as a mathematical object:
 
 We think of computers as doing arithmetic. But we can also think of it as a relationship between the operands e.g. rather than thinking of addition as a process (add(2,3) = 5), we can think of addition as a relationship of three numbers represented as a triple ((2,3,5)). Instead of thinking of the computer taking in 2 and 3 and generating 5 (*computation problem*), we think of the computer as taking in (2,3,5) and generating `true` (*recognition problem*). Further, is human language syntax a computation problem or a recognition problem or both?
 
-## Baby's First Model of Computation
+## :baby: :bulb: Baby's First Model of Computation
 
 Imagine a box with a lightbulb sticking out of it. We connect this lightbulb-box to a tape. This tape has multiple cells, each with a symbol. For each symbol, it does some processing. At each cell, the lightbulb will either be on or off. If it is on, the input so far is *acceptable*. If it is off, the input so far is *unacceptable*. 
 
