--- a/notes/w3l1.md
+++ b/notes/w3l1.md
@@ -32,19 +32,19 @@ With just three operations, you can represent everything you can with an FSM:
 
 3. Kleene star :star2:
 
-| Syntax        | Semantics                                                          |
-| ------------- | ------------------------------------------------------------------ |
-| a             | {a}                                                                |
-| ε             | {ε}                                                                |
-| Ø             | {}                                                                 |
-| R $\cup$ S    | "Set of strings denoted by R" $\cup$ "Set of string denoted by S"  |
-| R $\circ$ S   | "Set of strings denoted by R" $\circ$ "Set of string denoted by S" |
-| R<sup>*</sup> | (Set denoted by R)<sup>*</sup>                                     |
+| Syntax        | Semantics                                                        |
+| ------------- | ---------------------------------------------------------------- |
+| a             | {a}                                                              |
+| ε             | {ε}                                                              |
+| Ø             | {}                                                               |
+| R &cup; S     | "Set of strings denoted by R" &cup; "Set of string denoted by S" |
+| R &cir; S     | "Set of strings denoted by R" &cir; "Set of string denoted by S" |
+| R<sup>*</sup> | (Set denoted by R)<sup>*</sup>                                   |
 
 Suppose we have an alphabet {0,1} a language L = {all even length strings}. How would we represent this with a RegEx?
 
 <div align="center">
-((0 ∪ 1) ○ (0 ∪ 1))<sup>*</sup>
+((0 ∪ 1) &cir; (0 ∪ 1))<sup>*</sup>
 </div>
 
 Suppose we have another language L = {no two 1's adjacent}.
@@ -71,7 +71,7 @@ G := (V, Σ, R, S)
 
 - R = finite set of rewriting rules
   
-  - of the form V &RightArrow; (V &cup; &Sigma;)<sup>*</sup>
+  - of the type V &RightArrow; (V &cup; &Sigma;)<sup>*</sup>
 
 - S = start variable
 
