format conversion + problems and exercises from ch2

--- a/notes/w3l1.md
+++ b/notes/w3l1.md
@@ -2,7 +2,7 @@
 
 ## Recap
 
-Finite state languages are all languages accepted by a finite state machine. :robot:
+Finite state languages are all languages accepted by a finite state machine. 🤖
 
 - FSM = DFA or NFA
 
@@ -26,34 +26,34 @@ RegEx = DFA = NFA
 
 With just three operations, you can represent everything you can with an FSM:
 
-1. Union :unicorn:
+1. Union 🦄
 
-2. Concatenation :cat:
+2. Concatenation 🐱
 
-3. Kleene star :star2:
+3. Kleene star 🌟
 
 | Syntax        | Semantics                                                        |
 | ------------- | ---------------------------------------------------------------- |
 | a             | {a}                                                              |
 | ε             | {ε}                                                              |
 | Ø             | {}                                                               |
-| R &cup; S     | "Set of strings denoted by R" &cup; "Set of string denoted by S" |
-| R &cir; S     | "Set of strings denoted by R" &cir; "Set of string denoted by S" |
+| R ∪ S     | "Set of strings denoted by R" ∪ "Set of string denoted by S" |
+| R ○ S     | "Set of strings denoted by R" ○ "Set of string denoted by S" |
 | R<sup>*</sup> | (Set denoted by R)<sup>*</sup>                                   |
 
 Suppose we have an alphabet {0,1} a language L = {all even length strings}. How would we represent this with a RegEx?
 
 <div align="center">
-((0 ∪ 1) &cir; (0 ∪ 1))<sup>*</sup>
+((0 ∪ 1) ○ (0 ∪ 1))<sup>\*</sup>
 </div>
 
 Suppose we have another language L = {no two 1's adjacent}.
 
 <div align="center">
-0<sup>*</sup>(100<sup>*</sup>)<sup>*</sup> ○ (1 ∪ &epsi;)
+0<sup>\*</sup>(100<sup>\*</sup>)<sup>\*</sup> ○ (1 ∪ ε)
 </div>
 
-We need the term "&cir; (1 &cup; &epsilon;)" to account for "01".
+We need the term "○ (1 ∪ ε)" to account for "01".
 
 ## Context-Free Grammars
 
@@ -65,13 +65,13 @@ G := (V, Σ, R, S)
   
   - usually represented as capital letters
 
-- &Sigma; - finite set of terminals/symbols
+- Σ - finite set of terminals/symbols
   
   - same thing as alphabet
 
 - R = finite set of rewriting rules
   
-  - of the type V &RightArrow; (V &cup; &Sigma;)<sup>*</sup>
+  - of the type V → (V ∪ Σ)<sup>\*</sup>
 
 - S = start variable
 
