--- a/notes/w3l2.md
+++ b/notes/w3l2.md
@@ -10,13 +10,13 @@ Remember the small part of the CFL block on the Chomsky Hierarchy from week one 
 
 A given **context-free grammar** (CFG) "G" consists of:
 
-$$
-G := (V, \Sigma, R, S)
-$$
+<div align="center">
+G := (V, Σ, R, S)
+</div>
 
 - V = set of variables
 
-- $\Sigma$ = alphabet
+- Σ = alphabet
 
 - R = **rewriting/substitution rules**
 
@@ -24,7 +24,7 @@ $$
 
 L(G) is the *language* of G i.e. the set of all strings G generates.
 
-When you take a given word $w \in \mathscr{L}(G)$, you can view "w"  by expanding the nodes of the parse tree (which starts at "S") and viewing the derivation.
+When you take a given word *w* ∈ ℒ(G), you can view *w*  by expanding the nodes of the parse tree (which starts at "S") and viewing the derivation.
 
 ### Derivations
 
@@ -66,29 +66,29 @@ An **inherently ambiguous language** is a **non-regular language**, but we won't
 
 GNFAs were invented to simplify proofs.
 
-Imagine a DFA. It has its transition function $\delta : (Q \times \Sigma) \rightarrow Q$.
+Imagine a DFA. It has its transition function δ : (Q × Σ) → Q.
 
-An NFA has its transition function $\delta : (Q \times (\Sigma \cup \{\epsilon\})) \rightarrow Q$.
+An NFA has its transition function δ : (Q × (Σ ∪ {ε})) → Q.
 
-Therefore, the "G" in "GNFA" means to generalize the transition function so that we can label the edges of the machine with an entire regular expression: $\delta : (Q - \{F\}\times Q - \{q_0\}) \rightarrow \mathscr{R}$ where $\mathscr{R}$ is "all possible regular expressions over $\Sigma$."
+Therefore, the "G" in "GNFA" means to generalize the transition function so that we can label the edges of the machine with an entire regular expression: δ: (Q - {F} × Q - {q<sub>0</sub>}) → ℛ where ℛ is "all possible regular expressions over Σ."
 
 - We have a function which, for every possible pair of nodes, gives us the regular expression which can transition from one to another.
 
 - This allows us to "skip over" input symbols, unlike in NFAs and DFAs.
 
-- The complicated-looking part about $- \{q_0\}$ just means we can't transition into the starting symbol with a regular expression.
+- The complicated-looking part about - {q<sub>0</sub>} just means we can't transition into the starting symbol with a regular expression.
 
-- Similarly, we cannot transition into the accepting state $F$ (also called $q_A$). In GNFAs, we can **only have one accepting state**.
+- Similarly, we cannot transition into the accepting state *F* (also called q<sub>A</sub>). In GNFAs, we can **only have one accepting state**.
 
-$$
-\text{GNFA} := (Q,\Sigma,\delta,q_0,q_A)
-$$
+<div align="center">
+GNFA := (Q,Σ, δ, q<sub>0</sub>,q<sub>A</sub>)
+</div>
 
-GNFAs are allowed to transition from two nodes $p$ and $q$ on any input sequence of zero or more symbols as long as those symbols match $R$.
+GNFAs are allowed to transition from two nodes *p* and *q* on any input sequence of zero or more symbols as long as those symbols match *R*.
 
 i.e. GNFAs **do pattern matching** to transition between two nodes.
 
-ex: USD currency notation :moneybag::
+ex: USD currency notation 💵:
 
 ```mermaid
 graph LR
@@ -100,12 +100,11 @@ graph LR
     dot--DD-->qA((qA))
 ```
 
-$$
-D := 0\dots 9\\
-D_1 := 1 \dots 9
-$$
-
-
+<div align="center">
+D := 0...9
+<br>
+D<sub>1</sub> := 1... 9
+</div>
 
 ## Pumping Lemma :muscle:
 
@@ -115,11 +114,11 @@ If L is a finite state language then there exists a constant p (that depends onl
 
 - There exists substrings x, y, z such that s can be represented as s=xyz
   
-  - No overlaps! :no_good_man:
+  - No overlaps! 🙅‍♂️
 
-- x and z are in Sigma-star $x,z \in \Sigma^*$
+- x and z are in Sigma-star: *x*,*z* ∈ Σ<sup>\*</sup>
 
-- y is in Sigma-plus $y \in \Sigma^+$
+- y is in Sigma-plus *y* ∈ Σ<sup>+</sup>
 
 - y is longer than 0 (i.e. y is not the empty string)
 
@@ -133,10 +132,11 @@ If L is a finite state language then there exists a constant p (that depends onl
 
 ### Example
 
-$$
-\Sigma := \{a,b\}\\
-L := \{ww | w \in \Sigma^*\}
-$$
+<div align="center">
+Σ := {a,b}
+<br>
+L := {ww | w ∈ Σ<sup>\*</sup>}
+</div>
 
 1. To prove that L is **not** an FSL, suppose by contradiction that L was an FSL.
 
@@ -186,6 +186,4 @@ $$
 
 13. (12) is NOT in L because it can never be "ww" since the first half has fewer a's than the second half.
 
-14. Contradiction! :warning: (13) and (3.4)
-
-
+14. Contradiction! ⚠️  (13) and (3.4)
