--- a/notes/w4l1.md
+++ b/notes/w4l1.md
@@ -39,7 +39,26 @@ Write. It. Down.<br>
 
 M := (𝒫(Q), Σ, δ', ?, F').
 
-Every possible state that N could ever go through is denoted as δ<sup>\*</sup>(q<sub>0</sub>, w) = R for some string w in ℒ(N) i.e. given some string in ℒ(N), our machine N must accept that string. (R ⊆ F).
+Every possible state that N could ever go through for some string w in ℒ(N) is denoted as δ<sup>\*</sup>(q<sub>0</sub>, w) = R i.e. given some string in ℒ(N), our machine N must accept that string. (R ⊆ F).
 
+We write M's transition function δ' as δ' :: (𝒫(Q)×Σ) → 𝒫(Q) (i.e. the domain is (𝒫(Q)×Σ) (all possible states of N and all symbols in the alphabet); the range is 𝒫(Q) i.e. some other set of states of N).
 
+We apply δ' to each state V ∈ 𝒫(Q) (each possible set of states of N) and to each symbol *a* ∈ Σ:
+
+<div align="center">
+δ'(V, a) = {q ∈ Q | q ∈ δ<sup>\*</sup>(v, a), v ∈ V}
+</div>
+
+The above says: Consider every state *v* of V. For each v, we compute the set of states that N could go to *from* that state, given the current symbol *a*.
+
+```python
+# delta_prime is a map from (Set, Char) -> Set
+
+for each V in PowerSet(N.Q):
+    for each a in Sigma:
+        for each v in V:
+            for q in N.Q:
+                if q in star(N.delta(v,a)):
+                    M.delta[V][a] += q
+```
 
