--- a/notes/w4l2.md
+++ b/notes/w4l2.md
@@ -120,3 +120,74 @@ The idea here is just to add **four epsilon edges**: one from the previous accep
 </div>
 
 Now that we've covered each six cases, we have proven that **RegEx ≣ NFA**.
+
+## Closure
+
+We're gonna use a whole new special term for a set of languages, now called a **family** 👨‍👨‍👧‍👦 of languages to imply that they have something in common.
+
+- ex: the set of all languages with only even-length strings is called a family
+
+- if we take any two languages in that family and concatenate them together, we are guaranteed to have *another* member of that family!
+
+- so a family allows us to reason more clearly and definitively about languages
+
+Note that that phenomenon is NOT a property of those two languages specifically, but a property of that *family* of languages as whole.
+
+- we could take *any* two languages in that famiy and get the same result
+
+Another term! If performing some operation `op` on a family F always results in another language in F, then we say F is **closed under op**.
+
+<div align="center">
+(L<sub>1</sub> op L<sub>2</sub>) ∈ F
+</div>
+
+So, we say things like "union is a **closure property** of regular languages" or "regular languages are closed under concatenation."
+
+### Closed under Intersection
+
+We have an alphabet Σ and two regular languages L<sub>1</sub> and L<sub>2</sub>. We claim that regular languages are closed under intersection.
+
+Since we have two regular languages, we know we have two respective machines M<sub>1</sub> and M<sub>2</sub>.
+
+<div align="center">
+M<sub>1</sub> := (Q<sub>1</sub>, Σ, δ<sub>1</sub>, q<sub>1</sub>, F<sub>1</sub>)
+<br>
+M<sub>2</sub> := (Q<sub>2</sub>, Σ, δ<sub>2</sub>, q<sub>2</sub>, F<sub>2</sub>)
+<br>
+</div>
+
+NFAs are practically built on "OR" (e.g. the idea that any one thread accepting means the whole computation accepts). However, it's harder to say that they use "AND." What *does* use AND though... is a DFA!
+
+So, we're gonna construct one DFA for *both* languages such that all strings in both L<sub>1</sub> and L<sub>2</sub> (i.e. L<sub>1</sub> ∩ L<sub>2</sub>) are accepted by this DFA, which we will call "N," even though it's slightly confusing.
+
+<div align="center">
+N := (Q', Σ, δ', (q<sub>1</sub>, q<sub>2</sub>), F')
+<br>
+</div>
+
+The idea here is to "manage" both NFAs and make sure that they both accept. For this, we need to include the entirety of the states from both NFAs.
+
+- Q' = Q<sub>1</sub> × Q<sub>2</sub> i.e. every possible combination of both NFA states
+
+Rather helpfully, we can use the original transition functions in our definition of our new transition function. We basically don't do any work ourselves!
+
+- δ'((q<sub>1</sub>, q<sub>2</sub>), a) = (δ<sub>1</sub>(q<sub>1</sub>, a), δ<sub>2</sub>(q<sub>2</sub>, a))
+  
+  - We know our new transition function must return a *pair* of states, so the intuition here basically writes it for us.
+
+What do we want our final states to look like? We know it's gonna be a pair of states. Since it's final states, we also want our new final states to *both* be final states in their respective machines.
+
+- F' = {(r, s) | (r, s) ∈ Q<sub>1</sub> × Q<sub>2</sub>, r ∈ F<sub>1</sub> **AND** s ∈ F<sub>2</sub>}
+
+- The fact that this is an "AND" is what makes this an intersection!
+
+- If we used an "OR," we would be showing that regular languages are closed under *union*.
+
+## Closure Properties Table
+
+| Fam. | Union | Concat. | Star | Complementation | Intersection | Reversal |
+| ---- | ----- | ------- | ---- | --------------- | ------------ | -------- |
+| FSL  | ✅    | ✅      | ✅   | ✅              | ✅           | ✅       |
+| CFL  | ✅    | ✅      | ✅   | ❌              | ❌           | ✅       |
+
+
