week 5 lec 1 php

--- a/notes/w5l1.md
+++ b/notes/w5l1.md
@@ -74,9 +74,11 @@ In other words, the pumping lemma is **necessary but not sufficient** to be a re
    
    3. Pigeonhole principle
    
-   4. These states are numbered from q<sub>0</sub> to q<sub>n</sub> with k < n
+   4. For a string of length n, we must have one transition for each symbol in the string. Thus, we have n transitions
    
-   5. Therefore, for a string of length n, there must be ??? TODO
+   5. However, for n transitions, we must have n+1 nodes, which is at least p+1 nodes
+   
+   6. p+1 nodes with n ≥ p symbols means at least one node must be repeated
 
 8. Let x := the string from q<sub>0</sub> to the first time we encounter q<sub>k</sub>
 
