--- a/notes/w6l1.md
+++ b/notes/w6l1.md
@@ -79,6 +79,28 @@ $$
 q \xrightarrow{s_i, a \rightarrow b} q'
 $$
 
+Example:
+- Σ = {a, b}
+- Γ = {$, a}
+- L = {a<sup>n</sup> b<sup>m</sup> | n ≥ m > 0}
+
+Our algorithm (in general):
+1. Mark bottom of stack
+2. For each input a push one Γ symbol (onto the stack) until input = b
+3. For each input b pop one Γ symbol until one of three things happens:
+    1. End of input string → accept because n > m
+    2. Reach bottom of stack → accept because n = m
+    3. Reach bottom of stack but there is more input → do not accept
+
+Our PDA (specifically):
+```
+                   v--/a,ε→a
+->[q0]- ε,ε→$ ->[q1]-/--------- b,a→ε ->(qA)-/b,a→ε
+                                         ^--/
+```
+
+Coming up... 🥁🥁🥁
+
 ## Closure Properties
 
 ## Pumping Lemma for CFLs 💡
