--- a/notes/w7l1.md
+++ b/notes/w7l1.md
@@ -52,4 +52,24 @@ However, if we have δ(q, ε, ε) defined for any state q, then we **cannot have
 | q   | ε   | a   | No other alphabet symbol for a |
 | q   | ε   | ε   | NO TRANSITIONS ALLOWED FOR q   |
 
-Having an ε in either the alphabet or the stack position "blacks out" the rest of the possibilities for the respective position. If we have a ε in the alphabet position, then we cannot define any other alphabet rules for the stack symbo! If we have a ε in the stack position, then we cannot define any other stack position rules for the alphabet symbol! If we have a ε in BOTH, then that is the only rule we can have for state q. 
+Having an ε in either the alphabet or the stack position "blacks out" the rest of the possibilities for the respective position. If we have a ε in the alphabet position, then we cannot define any other alphabet rules for the stack symbol! If we have a ε in the stack position, then we cannot define any other stack position rules for the alphabet symbol! If we have a ε in BOTH, then that is the only rule we can have for state q. 
+
+Is the following a DPDA?
+
+```
+->()-- ε,ε→$ -->[]-- (,ε→( --/
+   \-- ε,$→ε --/  \-- ),(→ε --/
+```
+
+**No**, because we have two transitions leaving the non-accepting state in the form ε, x and a, ε which will **always conflict** with each other. Essentially, the "ε, x" says "I don't care what the input symbol is as long as the stack symbol is x" and the "a, ε" says "I don't care what the stack symbol is as long as the input symbol is a." You can kinda see the conflict already: What about "a, x"? Which transition has "precedence"? We are giving the machine a choice/decision, thus non-determinism.
+
+However, if we think about it a little 🧠we can really only have this situation when we are reading a "(" and we have a "$" at the top of the stack i.e. *at the beginning of every valid string*. So, to help make this deterministic, we can just move this ambiguity - this decision about if we are encountering the first left parenthese of not - to the initial stack movement itself.
+
+The DPDA is really:
+
+```
+->()-- (,ε→$ -->[]-- (,ε→( --/
+   \-- ),$→ε --/  \-- ),(→ε --/
+```
+
+
