added TM to w7l2

--- a/notes/w7l2.md
+++ b/notes/w7l2.md
@@ -48,8 +48,6 @@ Right-most derivation:
  ()()()
 ```
 
-
-
 A **sentential form** is a string of variables and terminals i.e. each step of a derivation.
 
 - If you have:
@@ -65,8 +63,6 @@ A **sentential form** is a string of variables and terminals i.e. each step of a
   - u ↣ v using the rule T → h to replace the reducing string h
   
   - i.e. xhy ↣ xTy using rule T → h
-
-
 
 There are actually **two** left-most reductions:
 
@@ -123,3 +119,35 @@ PDA:
 ```
 
 The result of the PDA depend on the state r, v, and the contents of the stack.
+
+### Single Tape Turing Machine
+
+```
+     [TM]
+Left <-|-> Right
+       |-> Read AND Write head
+[ | | | | | |␢|␢|␢|␢... Infinity]
+ ^INPUT "w" | ^Rest of infinite tape is filled with BLANKS ␢
+```
+
+The (main) differences between an FSM and a (single-tape) TM are:
+
+- TM has a read **and write head**
+
+- TM can read **left or right**
+
+- TM has an **infinite input tape**
+
+### Turing Machine
+
+```
+    /---------/--[TM]
+    |         |    |
+    |         |    |
+    |         | 1: [ | | | | | |␢|␢|␢|␢... Infinity]
+    |     2: [ | | | | | |␢|␢|␢|␢... Infinity]
+    | ... N TAPES
+N: [ | | | | | |␢|␢|␢|␢... Infinity]
+```
+
+The proper Turing machine has not just one, but N infinite, readable-writable, two-way **work tapes**.
