--- a/readings/3.3.md
+++ b/readings/3.3.md
@@ -39,3 +39,5 @@ How would you represent a graph in Lisp? Probably something like:
 ```
 
 This is a string *encoding* of a graph, even though it isn't enclosed in double quotes or something. Like I said, you're already used to string encodings, you just didn't think of them as "encodings."
+
+With TMs, encodings are denoted with angle brackets \<Encoded Form\>. So if G is a graph, then \<G\> is the string encoding of G. 
