--- a/readings/3.3.md
+++ b/readings/3.3.md
@@ -40,4 +40,8 @@ How would you represent a graph in Lisp? Probably something like:
 
 This is a string *encoding* of a graph, even though it isn't enclosed in double quotes or something. Like I said, you're already used to string encodings, you just didn't think of them as "encodings."
 
-With TMs, encodings are denoted with angle brackets \<Encoded Form\>. So if G is a graph, then \<G\> is the string encoding of G. 
+With TMs, encodings are denoted with angle brackets \<Encoded Form\>. So if G is a graph, then \<G\> is the string encoding of G. If M is a Turing machine, then \<M\> is the string encoding of M.
+
+**Any TM can be encoded** and even stronger, **any TM can be encoded into its own alphabet**.
+
+This is the basis for *compilation* of a program in one language e.g. C into the binary alphabet for CPUs. The program code is itself represented in binary on disk.
